--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap');
 
 * {
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
+  font-size: 70%;
 }
 body {
   font-family: 'Opes Sans', sans-serif;
   background-color: rgba(52, 152, 219, 0.2);
   color: #555;
-  margin: 0;
-  padding: 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -20,17 +21,18 @@ body {
   border-radius: 10px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   padding: 2rem;
-  max-width: 1000px;
+  max-width: 800px;
   width: 100%;
 }
 .title {
   text-align: center;
-  font-size: 2rem;
+  font-size: 2.5rem;
   font-weight: bold;
   margin-bottom: 2rem;
 }
 .section h3 {
   font-weight: bold;
+  font-size: 1.5rem;
   margin-top: 0;
   margin-bottom: 0.5rem;
 }
@@ -84,16 +86,16 @@ body {
   display: flex;
   justify-content: space-between;
   margin-bottom: 1rem;
-  font-size: 1.4rem;
+  font-size: 2.4rem;
   font-weight: bold;
   margin: 2rem 0;
 }
 
 .message {
   text-align: center;
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   margin-bottom: 1rem;
-  color: #3498db;
+  color: #ff0000;
 }
 
 .btn {
@@ -120,19 +122,20 @@ body {
   }
 
   .card-container img {
-    width: 80px;
-    height: 110px;
+    width: 5rem;
+    height: 6.875rem;
   }
 
   .ground img {
-    width: calc(80px * 0.95);
-    height: calc(110px * 0.95);
+    width: calc(5rem * 0.9);
+    height: calc(6.875rem * 0.95);
   }
 
   .scores {
     flex-direction: column;
     align-items: center;
-    font-size: 1.2rem;
+    gap: 1.2rem;
+    font-size: 2.2rem;
   }
 
   .message {
